@@ -46,8 +46,14 @@ module Technoweenie # :nodoc:
               self.height = result.extent.size.height if respond_to?(:height)
               
               # Get a new temp_path for the image before saving
-              temp_paths.unshift Tempfile.new(random_tempfile_filename, Technoweenie::AttachmentFu.tempfile_path).path
-              result.save self.temp_path, OSX::NSJPEGFileType
+              out_file = random_tempfile_filename
+              temp_paths.unshift Tempfile.new(out_file, Technoweenie::AttachmentFu.tempfile_path).path
+              properties = nil
+              jpeg = out_file =~ /\.jpe?g\z/i
+              quality = attachment_options[:jpeg_quality]
+              quality = quality ? quality.to_i : -1
+              properties = { OSX::NSImageCompressionFactor => quality / 100.0 } if jpeg && quality.between?(0, 100)
+              result.save(self.temp_path, OSX::NSJPEGFileType, properties)
               self.size = File.size(self.temp_path)
             end
           end          
