@@ -58,7 +58,7 @@ class Test::Unit::TestCase #:nodoc:
   def teardown
     FileUtils.rm_rf File.join(File.dirname(__FILE__), 'files')
     # Files generated by random_tempfile_filename
-    FileUtils.rm_rf Dir['[0-9]*.png']
+    FileUtils.rm_rf Dir['[0-9]*.{png,jpg}']
   end
 
   self.use_transactional_fixtures = true
